# spil

./: .dockerignore  .flake8  .gitignore  .readthedocs.yaml  README.md  README.rst  conftest.py  docker-compose.yml  package.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto_test.yml  auto_test_ubuntu.yml  auto_test_win.yml  publish_pypi.yml  publish_testpypi.yml
demo_conf/: data_conf.py  example_searches.py  example_sids.py  fs_conf.py  sid_conf.py
demo_conf/examples/: data_conf.py
docs/: INSTALL.md  api.rst  background.md  client_server.md  conf.py  config.md  configuration.md  configuration_advanced.md  dev_guide.md  faq.md  features.md  glossary.md  index.rst  installation.md  overview.md  requirements.txt  spil_ui_notes.md  spil_ui_usage.md  testing.md  tutorials.md  usage.md  user_guide.md  wait.md
documentation/: INSTALL.md  searching.md
hamlet_conf/: data_conf.py  fs_conf.py  fs_server_conf.py  sid_conf.py  spil_context_conf.py  spil_data_conf.py  spil_fs_conf.py  spil_fs_server_conf.py  spil_sg_conf.py  spil_sid_conf.py
hamlet_conf/data/: hamlet.sids.txt
hamlet_conf/data/testing/: hamlet.sids.txt
hamlet_conf/examples/: fs_conf_artichoke.py  fs_conf_kumquat.py  fs_server_conf.py
hamlet_conf/scripts/: example_sids.py  generate_example_sids.py  save_examples_to_file.py  save_examples_to_mock_fs.py
hamlet_conf/tests/: core_tests.py  data_test.py  data_tests.py  finder_path_tests.py  finder_tests.py  getter_search_tests.py  getter_sid_tests.py  path_tests.py  quicktest.py  writer_tests.py
limbo/: fs_conf_load.py  sid_cache.py
spil/: __init__.py
spil/conf/: __init__.py  configio.py  context.py  data_conf_load.py  fs_conf.py  fs_conf_load.py  global_conf.py  project_conf.py  sid_conf.py  sid_conf_load.py  util.py
spil/data/: cache_helper.py  cs.py  data.py  data_attributes.py  ds.py  sid_cache.py  sid_cache_new.py
spil/libs/fs/: __init__.py  fs.py
spil/libs/sid/: __init__.py  sid.py
spil/libs/util/: conf.py  exception.py  log.py  singleton.py  substr.py  utils.py
spil/sid/: __init__.py  sid.py
spil/sid/core/: fs_resolver.py  query_helper.py  sid_factory.py  sid_helper.py  sid_resolver.py  string_resolver.py  uri_helper.py  utils.py
spil/sid/pathops/: find_paths.py  fs_resolver.py  getter_paths.py  pathconfig.py  write_paths.py
spil/sid/read/: find_constants.py  find_glob.py  find_list.py  find_paths.py  finder.py  getter.py  tools.py  util.py
spil/sid/search/: fs.py  ls.py  ss.py  tools.py  util.py
spil/sid/write/: draft.py  setter.py  write_all.py  write_writers.py  writer.py
spil/tests/: fs_init.py  misc_sid_tests.py  search_examples.py  sid_examples.py  sid_tests.py
spil/tests/config_checks/: check_01_sid_config.py  check_02_path_config.py  check_03_config_coverage.py
spil/tests/fs/: fs_path_tests.py  (+4 more)
spil/util/: caching.py  exception.py  log.py  pool.py  singleton.py  substr.py  utils.py
spil_hamlet_conf/: spil_data_conf.py  spil_fs_conf.py  spil_fs_server_conf.py  spil_rest_conf.py  spil_sid_conf.py
spil_hamlet_conf/hamlet_scripts/: example_sids.py  generate_example_sids.py  save_examples_to_file.py  save_examples_to_mock_fs.py
spil_hamlet_conf/hamlet_tests/: core_test.py  data_test.py  finder_test.py  path_test.py
spil_hamlet_conf/scripts/: example_sids.py  save_examples_to_file.py  save_examples_to_mock_fs.py
spil_hamlet_conf/tests/: core_test.py  data_test.py  finder_test.py  path_test.py  quicktest.py
spil_plugins/crud/: next_get.py
spil_plugins/kitsu/: conf.py  connect_gazu.py  core.py  find_kitsu.py  util.py
spil_plugins/sg/: connect_sg.py  find_sg.py  get_sg.py  sandbox.py  temp.py  utils.py  write_sg.py
spil_plugins/typesense/: README.md  connect_ts.py  schema.py  search.py  sids_to_jsonl.py  write.py
spil_server/: client_server.md
spil_server/docker/: Dockerfile  requirements.txt
spil_tests/: __init__.py
spil_tests/config_checks/: check_01_sid_config.py  check_02_path_config.py  check_03_config_coverage.py
spil_tests/config_tests/: test_01_config.py
spil_tests/feature_tests/: test_pooled.py
spil_tests/prep/: make_mock_fs.py  parse_sids_and_save_to_file.py  parse_sids_from_fs.py  save_sid_list_to_file.py  sid_list_file_to_mock_fs.py
spil_tests/utils/: __init__.py  customsearch.py  datasearch_data.py  draft.py  dualsearch_a_b.py  dualsearch_ab_tester.py  dualsearch_ls_fs.py  filesearch_fs.py  init.py  listsearch_ls.py  make_mock_fs.py  mock_timer.py  search_tester.py  sid_core_tester.py  sid_core_tests.py  sid_data_tester.py  sid_data_tests.py  sid_full_test.py  sid_full_tester.py  sid_path_test.py  sid_path_tester.py  test_utils.py
tests/: mock_timer.py  test_00_init.py  test_01B_sids.py  test_01_config.py  test_02_save_sids_to_file.py  test_03_listsearch_ls.py  test_04_generate_files.py  test_05_parse_files.py  test_06_filesearch_fs.py  test_07_ls_fs.py  test_08_data.py  test_lru.py
wip/old/: test_06_filesearch_fs.py
(+47 files in other folders)
