[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "spil",
  "spil_hamlet_conf"
]
exclude = [".gitignore"]

[project]
name = "spil"
version = "0.2.1"
description = "The Simple Pipeline Lib."
readme = "README.md"
authors = [{ name = "Michael Haussmann", email = "spil@xeo.info" }]
license = { file = "LICENSE" }
classifiers=[
        "Development Status :: 4 - Beta",
        'Operating System :: OS Independent',
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Intended Audience :: Developers",
        "Natural Language :: English",
        "Topic :: Software Development",
        "Topic :: Software Development :: Libraries",
        "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
]
keywords=[
    'vfx', 'cg', 'vfx-pipeline', 'cg-pipeline', 'path templates'
]
dependencies = [
    "resolva",
    "Fileseq",
    "future",
    "logzero",
    "typing-extensions",
    "codetiming",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["pytest"]  # "Faker"
qc = ["mypy", "black", "flake8", "isort", "refurb"]  # Code Quality
sg = ["shotgun-api3", "Unidecode"]  # SG plugin

[project.urls]
"Homepage" = "https://github.com/MichaelHaussmann/spil"
"Documentation" = "https://spil.readthedocs.io"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100
target-version = ['py37']

[tool.refurb]
python-version = 3.7
ignore = [126]

[tool.mypy]
check-untyped-defs = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
log_cli = true
addopts = "--doctest-modules --ignore=spil_plugins --ignore=spil/sid/read/finders/find_cache.py --ignore=spil_server --ignore=spil_hamlet_conf/hamlet_tests/performance --ignore=spil_hamlet_conf/hamlet_tests/adhoc_tests --capture=no"

#log_cli_level = 10
#testpaths = [
#    "tests",
#    "integration",
#]
# note the use of single quote below to denote "raw" strings in TOML
# 'ignore:function ham\(\) is deprecated:DeprecationWarning',
